--- a/blogicum/templates/blog/user.html
+++ b/blogicum/templates/blog/user.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 {% load django_bootstrap5 %}
-{% block title %}
-  Редактирование профиля
-{% endblock %}
+{% block title %}Редактирование профиля{% endblock %}
 {% block content %}
   <div class="col d-flex justify-content-center">
     <div class="card" style="width: 40rem;">
       <div class="card-header">
-        Редактирование профиля - {{ request.user }}
+        Редактирование профиля - {{ request.user.username }}
       </div>
       <div class="card-body">
         <form method="post">
