--- a/blogicum/templates/includes/header.html
+++ b/blogicum/templates/includes/header.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% with request.resolver_match.view_name as view_name %}
 <header>
   <nav class="navbar navbar-light" style="background-color: lightskyblue">
     <div class="container">
@@ -6,15 +7,20 @@
         <img src="{% static 'img/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
         Блогикум
       </a>
-      {% with request.resolver_match.view_name as view_name %}
-        <ul class="nav  nav-pills">
+        <ul class="nav nav-pills">
           <li class="nav-item">
-            <a class="nav-link {% if view_name == 'pages:about' %} text-white {% endif %}" href="{% url 'pages:about' %}">
+            <a
+              class="nav-link {% if view_name == 'pages:about' %}text-white{% endif %}"
+              href="{% url 'pages:about' %}"
+            >
               О проекте
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if view_name == 'pages:rules' %} text-white {% endif %}" href="{% url 'pages:rules' %}">
+            <a
+              class="nav-link {% if view_name == 'pages:rules' %}text-white{% endif %}"
+              href="{% url 'pages:rules' %}"
+            >
               Правила
             </a>
           </li>
@@ -36,7 +42,7 @@
             </div>
           {% endif %}
         </ul>
-      {% endwith %}
     </div>
   </nav>
 </header>
+{% endwith %}
